[Add]ユーザー登録機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,10 @@
     <div class="body">
       <p class="notice"><%= notice %></p>
 
+      <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  <% end %>
+
       <%= yield %>
 
 
