--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="container">
+ <div class="row">
   <div class="col-xs-offset-3 col-xs-6">
     <h1>Editing Book</h1>
       <%= render 'books/error', model: @book %>
@@ -10,4 +11,5 @@
     </div>
     </div>
   <div class="col-xs-3"></div>
+ </div>
 </div>
