--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
   <body class="header">
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
@@ -62,8 +63,10 @@
         </nav>
       </div>
     </header>
+    
     <div class="body">
       <p class="notice"><%= notice %></p>
+    </div>
 
       <% flash.each do |key, value| %>
     <%= content_tag(:div, value, class: "#{key}") %>
@@ -72,10 +75,16 @@
       <%= yield %>
 
 
-        <footer>
-          <p class="text-right"> CopyRight Infratop.inc</p>
-        </footer>
-      </div>
-    </div>
+       <footer>
+       
+         <div class="container mt-5">
+          <div class="row">
+           <div class="mx-auto">
+            <p class="text-right"> CopyRight Infratop.inc</p>
+           </div>
+          </div>
+         </div>
+         
+       </footer>
   </body>
 </html>
