--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,34 +15,29 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;;
- }
-clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
+
+header {
+	color:white;
 }
-.title {
-  color: #fff;
-  font-size: 20px;
+
+header .navbar-left span {
+	font-size: 20px;
+	padding-top: 10px;
 }
-.body {
-  margin: 55px 10% 0px 8%;
+
+body {
+	margin-top: 40px;
 }
-.notice {
-  color: green;
-  }
-.error {
+
+.actions {
+	margin-top:10px;
+}
+#error_explanation {
   color: red;
 }
-.error-message {
-  font-size: 12px;
-  list-style: square;
-  margin-left: 60px;
+.notice {
+  margin-top: 30px;
 }
-.actions {
-  margin-top: 5px;
+.error {
+  color: red;
 }
