--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,12 +50,12 @@
               </li>
               <li class="">
                 <%= link_to new_user_registration_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-edit" aria-hidden="true"> sign up</span>
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"> Sign up</span>
                 <% end %>
               </li>
               <li class="">
                 <%= link_to new_user_session_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> login</span>
+                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Log in</span>
                 <% end %>
               </li>
             <% end %>
@@ -63,7 +63,7 @@
         </nav>
       </div>
     </header>
-    
+
     <div class="body">
       <p class="notice"><%= notice %></p>
 
@@ -71,8 +71,9 @@
 
 
         <footer>
-          <p class="text-right"> CopyRight Infratop.inc</p>
+          <p class="text-center"> CopyRight Infratop.inc</p>
         </footer>
+
       </div>
     </div>
   </body>
