--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
-  <div class="row">
+ <div class="row">
 	<div class="col-md-6 col-md-offset-3">
+		
 	  <div class="top-text">
 		<h1>Welcom to
 		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
@@ -13,11 +14,16 @@
 		  	about various books!
 		</p>
 	  </div>
-	<div class="row">
-      <%= link_to "Log in", new_user_session_path, class:"btn btn-primary col-xs-10 col-xs-offset-1" %>
-	</div>
-	<div class="row">
-	  <%= link_to "Sign up", new_user_registration_path, class:"btn btn-success col-xs-10 col-xs-offset-1" %>
-	</div>
+	  
+	 <div class="btn-wrapper col-10 mx-auto">
+		 <div class="row">
+		 	 <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+		 </div>
+     <div class="row">
+    	 <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
+     </div>
+	 </div>
+	
   </div>
+ </div>
 </div>
