[Add]レイアウト修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookers2</title>
+    <title>Bookers2-debug</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="header">
-    <header class="navbar navbar-fixed-top navbar-inverse">
+  <body>
+    <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <nav class="nav navbar-left">
-            <span class="title">Bookers</span>
-        </nav>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
+        <a class="navbar-brand" href="/">
+            <span style="color:white">Bookers</span>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggle-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+
             <% if user_signed_in? %>
-              <li class="">
+
+              <li>
                 <%= link_to user_path(current_user), class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                <span class="glyphicon glyphicon-home" aria-hidden="true" style="color:white"> Home</span>
                 <% end %>
               </li>
-              <li class="">
+
+              <li>
                 <%= link_to users_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
+                <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:white"> Users</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to books_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
+                <span class="glyphicon glyphicon-book" aria-hidden="true" style="color:white"> Books</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
+                <span class="glyphicon glyphicon-log-out" aria-hidden="true" style="color:white"> Logout</span>
                 <% end %>
               </li>
+
+
             <% else %>
-              <li class="">
+               <li>
                 <%= link_to root_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                <span class="glyphicon glyphicon-home" aria-hidden="true" style="color:white"> Home</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to home_about_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
+                <span class="glyphicon glyphicon-link" aria-hidden="true" style="color:white"> About</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to new_user_registration_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-edit" aria-hidden="true"> Sign up</span>
+                <span class="glyphicon glyphicon-edit" aria-hidden="true" style="color:white"> Sign up</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to new_user_session_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Log in</span>
+                <span class="glyphicon glyphicon-log-in" aria-hidden="true" style="color:white"> Log in</span>
                 <% end %>
               </li>
+
             <% end %>
+
           </ul>
-        </nav>
+        </div>
       </div>
+     </nav>
     </header>
 
     <div class="body">
@@ -74,7 +88,7 @@
           <p class="text-center"> CopyRight Infratop.inc</p>
         </footer>
 
-      </div>
+
     </div>
   </body>
 </html>
