--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-header {
-	color:white;
+.bg-dark {
+	background-color: #343a40 !important;
 }
 
 header .navbar-left span {
@@ -27,6 +27,13 @@ header .navbar-left span {
 
 body {
 	margin-top: 40px;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #212529;
+	text-align: left;
+	background-color: #fff;
+	display: block;
 }
 
 .actions {
@@ -40,4 +47,31 @@ body {
 }
 .error {
   color: red;
+}
+
+.navbar-expand-lg .navbar-collapse {
+	display: flex !important;
+	flex-basis: auto;
+}
+.navbar-collapse {
+	flex-basis: 100%;
+	flex-grow: 1;
+	align-items: center;
+}
+.navbar-expand-lg .navbar-nav {
+	flex-direction: row;
+}
+.navbar .container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.container {
+	max-width: 1140px;
+}
+.navbar-right {
+	text-align:right;
+}
+.ml-auto {
+	margin-left: auto !important;
 }
