--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,8 @@ header .navbar-left span {
 }
 
 body {
-	margin-top: 40px;
+	margin: 0px;
+	padding: 0px;
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.5;
@@ -74,4 +75,9 @@ body {
 }
 .ml-auto {
 	margin-left: auto !important;
+}
+
+.row {
+	margin-right: -15px;
+	margin-left: -15px;
 }
