--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+   <input type="submit" name="commit" value="Sign up" class="btn btn-sm btn-success" data-disable-with="Sign up">
   </div>
+  
 <% end %>
 <%= render "devise/shared/links" %>
