--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
   <div class="row">
-    <h1 class="px-3 mx-auto">Welcom to
+    <div style="text-align: center">
+    <h1 class="px-3 mx-auto">
+      Welcom to
      <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-     <b>Bookers!!</b>
+     <strong>Bookers</strong>
+     !
     </h1>
+    </div
   </div>
 </div>
