[Add]レイアウト修正

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -10,6 +10,6 @@
   </div>
 
   <div class="actions row">
-    <%= f.submit class: "btn btn-primary col-xs-12" %>
+    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
   </div>
 <% end %>
