--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,9 @@
      <div class="user-name">Name</div>
       <%= f.text_field :name %>
      <div class="user-edit-image">Image</div>
-      <%= f.attachment_field :profile_image %>
+     
+      <%= f.attachment_field :profile_image, class: "user_image" %>
+      
      <div class="form-body">Introduction</div>
       <%= f.text_area :introduction %><br>
      <div class="form-group">
