--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
       <%= f.text_field :name %>
      <div class="user-edit-image">Image</div>
      
-      <%= f.attachment_field :profile_image, class: "user_image" %>
+      <%= f.attachment_field :profile_image %>
       
      <div class="form-body">Introduction</div>
       <%= f.text_area :introduction %><br>
