--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
   	  	  <% @users.each do |user| %>
 	  	  	<tr>
 	  	  	  
-	  	  	  <td></td>
+	  	  	  <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50,fallback: "no_image.jpg"%></td>
 	  	  	  
 	  	  	  <td><%= user.name %></td>
 	  	  	  <td><%= link_to "Show", "/users/#{user.id}" %></td>
