--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,9 +11,9 @@
      <div class="user-name">Name</div>
       <%= f.text_field :name %>
      <div class="user-edit-image">Image</div>
-     
-      <%= f.attachment_field :profile_image %>
-      
+
+      <%= f.file_field :profile_image, class: "form-control-file", placeholder: "プロフィール画像", accept: "image/*" %>
+
      <div class="form-body">Introduction</div>
       <%= f.text_area :introduction %><br>
      <div class="form-group">
