--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,16 +8,16 @@
     <div class="col-xs-9">
       <h1>Books</h1>
       <table class="table table-user-show">
-        
+
         <% @books.each do |book| %>
           <tr>
             <td><%= link_to user_path(@user) do %>
-            
-             <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg"%>
-              
+
+             <%= image_tag @user.get_profile_image(50,50) %>
+
             <% end %>
             </td>
-            
+
             <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
           </tr>
