--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,14 +19,14 @@
             <tr>
               <td>
                 <%= link_to user_path(book.user) do %>
-                
-                
-                <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50,fallback: "no_image.jpg"%>
-              
-              
+
+
+                <%= image_tag @user.get_profile_image(100,100) %>
+
+
                 <% end %>
                 </td>
-              
+
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
             </tr>
