--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,7 +3,7 @@
     <div style="text-align: center">
     <h1 class="px-3 mx-auto">
       Welcom to
-     <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+     <i class="fas fa-book"></i>
      <strong>Bookers</strong>
      !
     </h1>
