--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
  <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		
+
 	  <div class="top-text">
 		<h1>Welcom to
-		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+		  <i class="fas fa-book"></i>
 		  <b>Bookers!!</b>
 		</h1>
 		<p>In
@@ -14,7 +14,7 @@
 		  	about various books!
 		</p>
 	  </div>
-	  
+
 	 <div class="btn-wrapper col-10 mx-auto">
 		 <div class="row">
 		 	 <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
@@ -23,7 +23,7 @@
     	 <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
      </div>
 	 </div>
-	
+
   </div>
  </div>
 </div>
