--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -8,8 +8,8 @@
   	<%= f.label :Opinion %>
     <%= f.text_area :body, class: "col-xs-12" %>
   </div>
-  
-  <div class="form-group">
-   <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Ce Book">
+
+  <div class="actions row">
+    <%= f.submit class: "btn btn-primary col-xs-12" %>
   </div>
 <% end %>
