--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/">
-            <span style="color:white">Bookers</span>
+            <span class="title">Bookers</span>
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,23 +27,23 @@
 
               <li>
                 <%= link_to user_path(current_user), class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true" style="color:white"> Home</span>
+                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
                 <% end %>
               </li>
 
               <li>
                 <%= link_to users_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:white"> Users</span>
+                <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
                 <% end %>
               </li>
               <li>
                 <%= link_to books_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-book" aria-hidden="true" style="color:white"> Books</span>
+                <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
                 <% end %>
               </li>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-out" aria-hidden="true" style="color:white"> Log out</span>
+                <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Log out</span>
                 <% end %>
               </li>
 
@@ -51,22 +51,22 @@
             <% else %>
                <li>
                 <%= link_to root_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true" style="color:white"> Home</span>
+                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
                 <% end %>
               </li>
               <li>
                 <%= link_to home_about_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-link" aria-hidden="true" style="color:white"> About</span>
+                <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
                 <% end %>
               </li>
               <li>
                 <%= link_to new_user_registration_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-edit" aria-hidden="true" style="color:white"> Sign up</span>
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"> Sign up</span>
                 <% end %>
               </li>
               <li>
                 <%= link_to new_user_session_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-in" aria-hidden="true" style="color:white"> Log in</span>
+                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Log in</span>
                 <% end %>
               </li>
 
