--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
 
   <div class="container px-5 px-sm-0">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-8 offset-md-1">
         <h2>User info</h2>
   <thead>
     <tr>
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th colspan="2">
-        <%= link_to edit_user_path(current_user), class:"btn btn-default btn-block" do %>
+        <%= link_to edit_user_path(user), class:"btn btn-default btn-block" do %>
         <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
       <% end %>
       </th>
