--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,3 +13,16 @@
   margin-bottom: 1rem;
   color: #212529;
 }
+
+.container {
+  margin: 0 auto;
+  text-align: center;
+}
+.row {
+  margin: 0 auto;
+  text-align: center;
+}
+.col-md-3 {
+  margin: 0 auto;
+  text-align: center;
+}
