--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -11,3 +11,16 @@ div {
   background-color: #28a745;
   border-color: #28a745;
 }
+
+.container {
+  margin: 0 auto;
+  text-align: center;
+}
+.row {
+  margin: 0 auto;
+  text-align: center;
+}
+.col-md-3 {
+  margin: 0 auto;
+  text-align: center;
+}
