--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.container {
+  margin: 0 auto;
+  text-align: center;
+}
+.row {
+  margin: 0 auto;
+  text-align: center;
+}
+.col-md-3 {
+  margin: 0 auto;
+  text-align: center;
+}
