--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,18 +1,18 @@
 <div class="container">
   <div class="row">
-     <div class="col-xs-offset-3 col-xs-6">
-      
+     <div class="col-md-3">
+
       <h1>Editing Book</h1>
        <%= render 'books/error', model: @book %>
        <%= render 'books/book', book: @book %>
-       
+
      <div class="menu">
-      
+
        <%= link_to "Show", book_path(@book) %>
        |
        <%= link_to "Back", books_path %>
      </div>
-     </div>
-   <div class="col-xs-3"></div>
-</div>
+
+    </div>
+  </div>
 </div>
