--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-3">
+    <div class="col-md-3">
      <%= render 'books/error', model: @book %>
      <%= render 'users/user', user: @user %>
       <h2>New book</h2>
