--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,12 +1,14 @@
 <div class="container">
   <div class="row">
-    <div style="text-align: center">
+    <div class="col-md-3">
+     <div style="text-align: center">
     <h1 class="px-3 mx-auto">
       Welcom to
      <i class="fas fa-book"></i>
      <strong>Bookers</strong>
      !
     </h1>
-    </div
+     </div>
+    </div>
   </div>
 </div>
