--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
  <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-3">
 
 	  <div class="top-text">
 		<h1>Welcom to
@@ -23,7 +23,7 @@
     	 <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
      </div>
 	 </div>
-
+	 
   </div>
  </div>
 </div>
