--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -24,7 +24,7 @@
     <tr>
       <th colspan="2">
         <%= link_to edit_user_path(user), class:"btn btn-default btn-block" do %>
-        <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+        <i class="fas fa-user-cog" aria-hidden="true"></i>
       <% end %>
       </th>
     </tr>
