--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,7 @@
 <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= form_with model: @user, url: user_password_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
