--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 
      <h2>User info</h2>
 
-     <%= form_for(@user) do |f| %>
+     <%= form_with model: @user, local: true do |f| %>
      <%= render 'books/error', model: @user %>
 
      <div class="user-name">Name</div>
